<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FooActivity">

    <Button
        android:id="@+id/buttonGPIO3C2High"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F44336"
        android:onClick="GPIO3_C2_Output"
        android:text="@string/gpio3_c2_high"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGPIO3C2Low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#000000"
        android:onClick="GPIO3_C2_Output"
        android:text="@string/gpio3_c2_low"
        app:layout_constraintStart_toEndOf="@+id/buttonGPIO3C2High"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUART3TX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:onClick="UARTProcess"
        android:text="@string/uart3tx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGPIO3C2High" />

    <Button
        android:id="@+id/buttonUART3RX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:onClick="UARTProcess"
        android:text="@string/uart3rx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUART3TX" />

    <Button
        android:id="@+id/buttonUART4TX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:onClick="UARTProcess"
        android:text="@string/uart4tx"
        app:layout_constraintStart_toEndOf="@+id/buttonUART3TX"
        app:layout_constraintTop_toBottomOf="@+id/buttonGPIO3C2Low" />

    <Button
        android:id="@+id/buttonUART4RX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:onClick="UARTProcess"
        android:text="@string/uart4rx"
        app:layout_constraintStart_toEndOf="@+id/buttonUART3RX"
        app:layout_constraintTop_toBottomOf="@+id/buttonUART4TX" />

    <TextView
        android:id="@+id/textViewU3RX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/uart3_rx_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUART3RX" />

    <TextView
        android:id="@+id/textViewU4RX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/uart4_rx_data"
        app:layout_constraintStart_toEndOf="@+id/textViewU3RX"
        app:layout_constraintTop_toBottomOf="@+id/buttonUART4RX" />
</androidx.constraintlayout.widget.ConstraintLayout>